<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/home"
        android:title="Home" />

    <item
        android:id="@+id/menu_food"
        android:icon="@drawable/food"
        android:title="Food" />

    <item
        android:id="@+id/menu_exercise"
        android:icon="@drawable/exercise"
        android:title="Exercise" />

    <item
        android:id="@+id/menu_moments"
        android:icon="@drawable/users"
        android:title="Moments" />

    <item
        android:id="@+id/menu_notifications"
        android:icon="@drawable/bell"
        android:title="Notifs" />
</menu>