...
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/foodFragment"
    tools:context=".FoodFragment">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/macrosProgressBars" >

                    <ImageButton
                        android:contentDescription="food record button"
                        android:id="@+id/foodRecordButton"
                        android:layout_width="300dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/transparent"
                        android:scaleType="centerInside"
                        android:src="@drawable/food_record_button" />
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/foodRecordButtonFrame" >

                    <ImageButton
                        android:contentDescription="meal recipes button"
                        android:id="@+id/mealRecipesButton"
                        android:layout_width="300dp"
                        android:layout_height="80dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/meal_recipes_button"
                        android:background="@color/transparent"
                        android:layout_gravity="center_horizontal" />
...
