<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/exerciseGoalFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeightGoalFragment">

    <TextView
        android:id="@+id/textViewTitle"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewExerciseRecordsInfo"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageButton
                android:contentDescription="weight goal button"
                android:id="@+id/exerciseGoalButton"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:scaleType="centerInside"
                android:src="@drawable/exercise_goal_button"
                android:background="@color/transparent"
                android:layout_gravity="center_horizontal" />
...
